update space on checkout button

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <span class="original-price">$169.99</span>
           </div>
           <a href="#" class="btn-checkout">
-            <img src="./images/icon-cart.svg" alt="cart icon" />Add to Cart</a
+            <img src="./images/icon-cart.svg" alt="cart icon" />&nbsp;Add to
+            Cart</a
           >
         </div>
       </section>
